# Maya

./: .dockerignore  .env.example  .gitignore  Dockerfile  README  README.md  render.yaml
backend/: __init__.py  main.py  openai_sessions.py  pyproject.toml  realtime_session.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/api/routes/: health.py
backend/app/core/: config.py
backend/app/db/: sqlite.py
backend/app/schemas/: health.py
backend/app/services/: realtime.py
brain/: __init__.py  character_bible.py  constitution.md  constitution.py  conversation.py  curiosity.py  emotion.py  engine.py  humour.py  identity.py  knowledge_loader.py  maya_character_bible_v2.md  memory.py  midlifing_retrieval.py  models.py  prompt_composer.py  reflection.py  runtime_knowledge_store.py  values.py
brain/knowledge/: current_episode.md  lee.md  midlifing_show.md  simon.md
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  realtimeClient.ts  sessionBehaviour.ts
scripts/: build_midlifing_index.py  export_midlifing_runtime_index.py  fetch_midlifing_episodes.py  transcribe_midlifing_episodes.py
tests/: __init__.py  test_backend_app.py  test_backend_main.py  test_brain_state.py  test_curiosity.py  test_humour.py  test_midlifing_ingestion.py  test_midlifing_retrieval.py  test_openai_sessions.py  test_prompt_composer.py  test_realtime_session.py  test_runtime_knowledge.py
(+1 files in other folders)
